<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add_activity">

    <fragment
        android:id="@+id/navigation_add_activity"
        android:name="com.example.timetrack.client.menu.ui.addActivity.AddActivityFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_add_activity" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.timetrack.client.menu.ui.activities.ActivitiesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.timetrack.client.menu.ui.chart.ChartFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_chart" />
</navigation>